yml-coffe/coffee-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pssim-api2-svc
  labels:
    app: pssim-api2
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: pssim-api2
