yml-coffe/ingress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pssim-api2-ingress-svc
  labels:
    app: pssim-api2-nginx-ingress
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
    port: 443
    protocol: TCP
    name: https
    targetPort: 443
  selector:
    app: pssim-api2-nginx-ingress
  externalIPs:
  - 10.201.2.18
